[package]
name = "map-of-bgg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot = "0.1.4"
graphviz-rust = "0.9.0"
itertools = "0.12.1"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
statrs = "0.16.0"
